--- a/1.ders_notlar.md
+++ b/1.ders_notlar.md
@@ -34,6 +34,7 @@
 
 ## 8. Repo'nuzu Yönetin 📂
 - Repo sayfanızda, projelerinizi ekleyebilir, dosya yükleyebilir ve diğer kullanıcılarla işbirliği yapabilirsiniz. (Haydi, birlikte harika projeler geliştirelim! 💪)
+- Başkalarıyla paylaşmak için repo sayfanızdaki yeşil "Code" butonuna tıklayın ve açılan bölümdeki URL’yi kopyalama butonuna basın.
 
 ## 9. Gelişmeyi İzleyin 📈
 - Her yeni commit ile projenizin ne kadar ilerlediğini görebilirsiniz. Gelişim sürecinizi kutlamayı unutmayın! 🎉
